added glass transparency

--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/alpinejs": "^0.4.3",
     "@astrojs/react": "^4.2.0",
     "@fontsource/jaro": "^5.1.1",
     "@tailwindcss/vite": "^4.0.1",
+    "@types/alpinejs": "^3.13.11",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "alpinejs": "^3.14.8",
     "astro": "^5.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
