--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@openpanel/nextjs": "^1.0.7",
     "@payloadcms/db-postgres": "^3.23.0",
     "@payloadcms/next": "^3.23.0",
     "@payloadcms/payload-cloud": "^3.23.0",
