--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gsap": "^3.12.7",
     "lenis": "^1.2.3",
     "lucide-react": "^0.501.0",
+    "motion": "^12.7.4",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
